--- a/style.css
+++ b/style.css
@@ -72,6 +72,24 @@ h2 {
     box-shadow: 0 0 0 3px rgba(74, 105, 189, 0.2);
     outline: none;
 }
+#clear-filters-btn{
+        background-color: #726c6c;
+        color:white;
+        border:none;
+        padding: 10px;
+        border-radius: 6px;
+        cursor: pointer;
+        font-size: 1.1em; 
+        font-weight: 500;
+        transition: background-color 0.3s ease, transform 0.2s ease;
+        display: block;
+}
+
+#clear-filters-btn:hover {
+    background-color: #3a3838;
+    transform: translateY(-2px);
+}
+
 
 /* --- Stock Display Section --- */
 .stock-display-section {
@@ -323,6 +341,9 @@ tbody tr:hover {
 
     #clear-filters-btn {
         width: 100%;
+        border:none;
+        padding:10px;
+        font-size: medium;
     }
 
     /* --- TABLA RESPONSIVA - Transformación a "Tarjetas" --- */
@@ -496,6 +517,9 @@ tbody tr:hover {
 
     #clear-filters-btn {
         width: auto;
+        border:none;
+        padding:10px;
+        font-size: medium;
     }
 
     #add-new-btn {
